package com.example.family_tasks_proj.Child_Login;

import android.content.Context;
import android.content.Intent;
import android.content.SharedPreferences;
import android.os.Bundle;
import android.view.LayoutInflater;
import android.view.View;
import android.view.ViewGroup;
import android.widget.Button;
import android.widget.Toast;

import androidx.activity.result.ActivityResultCallback;
import androidx.activity.result.ActivityResultLauncher;
import androidx.annotation.NonNull;
import androidx.fragment.app.Fragment;

import com.example.family_tasks_proj.R;
import com.example.family_tasks_proj.child.ChildDashboardActivity;
import com.google.firebase.database.DataSnapshot;
import com.google.firebase.database.DatabaseError;
import com.google.firebase.database.FirebaseDatabase;
import com.google.firebase.database.ValueEventListener;
import com.journeyapps.barcodescanner.ScanContract;
import com.journeyapps.barcodescanner.ScanIntentResult;
import com.journeyapps.barcodescanner.ScanOptions;

/** מסך סריקת QR עבור הילד להתחברות מהירה. */
public class ChildQRLoginFragment extends Fragment {

    private static final String PREFS = "child_session";
    private static final String KEY_PARENT = "parentId";
    private static final String KEY_CHILD = "childId";

    private Button btnScanQR;
    private android.widget.ProgressBar progressScan;

    // אובייקט לניהול פתיחת המצלמה וקבלת תוצאת הסריקה
    private final ActivityResultLauncher<ScanOptions> barcodeLauncher =
            registerForActivityResult(
                    new ScanContract(),
                    new ActivityResultCallback<ScanIntentResult>() {
                        @Override
                        public void onActivityResult(ScanIntentResult result) {
                            handleQrScanResult(result);
                        }
                    }
            );

    @Override
    public View onCreateView(@NonNull LayoutInflater inflater, ViewGroup container, Bundle savedInstanceState) {
        View view = inflater.inflate(R.layout.fragment_child_q_r_login, container, false);
        btnScanQR = view.findViewById(R.id.btnScanQR);
        progressScan = view.findViewById(R.id.progressScan);
        btnScanQR.setOnClickListener(new View.OnClickListener() {
            @Override
            public void onClick(View view) {
                startQrScan();
            }
        });
        return view;
    }

    // פותח את מסך הסריקה
    private void startQrScan() {
        ScanOptions options = new ScanOptions();
        options.setOrientationLocked(false);
        options.setPrompt(getString(R.string.child_qr_scan_prompt));
        barcodeLauncher.launch(options);
    }

    // מטפל בתוצאה שהתקבלה מהמצלמה
    private void handleQrScanResult(ScanIntentResult result) {
        if (!isAdded()) {
            return;
        }

        String raw = result.getContents();
        if (raw == null) {
            Toast.makeText(requireContext(), R.string.child_qr_scan_cancelled, Toast.LENGTH_SHORT).show();
            return;
        }

        ParsedQr parsed = parseQr(raw.trim());
        if (isBlank(parsed.parentId)) {
            Toast.makeText(requireContext(), R.string.child_qr_invalid, Toast.LENGTH_SHORT).show();
            return;
        }

        checkQrTarget(parsed);
    }

    // מציג או מסתיר את מצב הטעינה
    private void setLoading(boolean isLoading) {
        if (btnScanQR != null) {
            btnScanQR.setEnabled(!isLoading);
        }
        if (progressScan != null) {
            if (isLoading) {
                progressScan.setVisibility(View.VISIBLE);
            } else {
                progressScan.setVisibility(View.GONE);
            }
        }
    }

    // בודק לאן להפנות את המשתמש לפי תוכן ה-QR
    private void checkQrTarget(ParsedQr parsed) {
        setLoading(true);
        if (isBlank(parsed.childId)) {
            // אם ה-QR מכיל רק הורה, עוברים למסך בחירת ילד מתוך המשפחה
            checkParentExists(parsed.parentId);
        } else {
            // אם ה-QR מכיל גם הורה וגם ילד, ננסה להיכנס ישירות לדשבורד של הילד
            checkChildExists(parsed.parentId, parsed.childId);
        }
    }

    // מפרק את הטקסט של ה-QR לנתונים
    private ParsedQr parseQr(String raw) {
        // מפרק את המחרוזת שנסרקה מה-QR כדי להוציא את ה-ID של ההורה והילד
        // הפורמט החדש הוא parent:{parentId}; הפורמט הישן יכול לכלול גם child:{childId}.
        ParsedQr parsedQr = new ParsedQr();
        if (isBlank(raw)) {
            return parsedQr;
        }

        if (raw.contains("|")) {
            fillParsedQrFromParts(parsedQr, raw);
            return parsedQr;
        }

        if (raw.startsWith("parent:")) {
            parsedQr.parentId = raw.substring("parent:".length()).trim();
        }

        return parsedQr;
    }

    // עוזר לפירוק QR מורכב המכיל גם הורה וגם ילד
    private void fillParsedQrFromParts(ParsedQr parsedQr, String raw) {
        String[] parts = raw.split("\\|");
        for (String part : parts) {
            if (part == null) {
                continue;
            }

            String trimmed = part.trim();
            if (trimmed.startsWith("parent:")) {
                parsedQr.parentId = trimmed.substring("parent:".length()).trim();
            } else if (trimmed.startsWith("child:")) {
                parsedQr.childId = trimmed.substring("child:".length()).trim();
            }
        }
    }

    // בודק מול Firebase שההורה קיים במערכת
    private void checkParentExists(final String parentId) {
        // לא מספיק לסרוק טקסט שנראה כמו QR תקין; בודקים שבאמת קיים הורה כזה ב-Firebase.
        FirebaseDatabase.getInstance().getReference("parents").child(parentId).addListenerForSingleValueEvent(new ValueEventListener() {
            @Override
            public void onDataChange(@NonNull DataSnapshot snapshot) {
                if (!isAdded()) {
                    return;
                }
                if (!snapshot.exists()) {
                    setLoading(false);
                    Toast.makeText(requireContext(), R.string.child_qr_parent_not_found, Toast.LENGTH_SHORT).show();
                    return;
                }
                saveSession(parentId, null);
                openChildSelection(parentId, null);
            }

            @Override
            public void onCancelled(@NonNull DatabaseError error) {
                if (!isAdded()) {
                    return;
                }
                setLoading(false);
                Toast.makeText(requireContext(), getString(R.string.child_qr_db_error, error.getMessage()), Toast.LENGTH_LONG).show();
            }
        });
    }

    // בודק מול Firebase שהילד קיים תחת ההורה
    private void checkChildExists(final String parentId, final String childId) {
        FirebaseDatabase.getInstance().getReference("parents").child(parentId).child("children").child(childId).addListenerForSingleValueEvent(new ValueEventListener() {
            @Override
            public void onDataChange(@NonNull DataSnapshot snapshot) {
                if (!isAdded()) {
                    return;
                }
                if (!snapshot.exists()) {
                    setLoading(false);
                    Toast.makeText(requireContext(), R.string.child_qr_child_not_found, Toast.LENGTH_SHORT).show();
                    return;
                }
                saveSession(parentId, childId);
                openChildDashboard(parentId, childId);
            }

            @Override
            public void onCancelled(@NonNull DatabaseError error) {
                if (!isAdded()) {
                    return;
                }
                setLoading(false);
                Toast.makeText(requireContext(), getString(R.string.child_qr_connection_error, error.getMessage()), Toast.LENGTH_LONG).show();
            }
        });
    }

    // פותח את מסך המשימות של הילד
    private void openChildDashboard(String parentId, String childId) {
        // שומר את ה-ID של ההורה והילד ב-SharedPreferences כדי שלא יצטרכו לסרוק שוב בכל כניסה
        saveSession(parentId, childId);
        // עובר ישירות לדשבורד של הילד
        Intent intent = new Intent(requireActivity(), ChildDashboardActivity.class);
        intent.putExtra(KEY_PARENT, parentId);
        intent.putExtra(KEY_CHILD, childId);
        startActivity(intent);
        requireActivity().finish();
    }

    // פותח את מסך בחירת הילד (כשנסרק רק הורה)
    private void openChildSelection(String parentId, String childId) {
        // שומר את מזהה ההורה ועובר למסך שבו הילד בוחר את השם שלו מתוך רשימת הילדים
        saveSession(parentId, childId);
        Intent intent = new Intent(requireActivity(), ChildSelectionActivity.class);
        intent.putExtra(KEY_PARENT, parentId);
        if (!isBlank(childId)) {
            intent.putExtra(KEY_CHILD, childId);
        }
        startActivity(intent);
        requireActivity().finish();
    }

    // שומר את פרטי ההתחברות בזיכרון המכשיר
    private void saveSession(String parentId, String childId) {
        // SharedPreferences מתאים כאן כי אלה נתוני התחברות קטנים למכשיר אחד.
        SharedPreferences preferences = requireContext().getSharedPreferences(PREFS, Context.MODE_PRIVATE);
        SharedPreferences.Editor editor = preferences.edit();
        editor.putString(KEY_PARENT, parentId);

        if (isBlank(childId)) {
            editor.remove(KEY_CHILD);
        } else {
            editor.putString(KEY_CHILD, childId);
        }
        editor.apply();
    }

    // בודק אם מחרוזת היא ריקה
    private boolean isBlank(String value) {
        return value == null || value.trim().isEmpty();
    }

    // אובייקט עזר לשמירת נתוני ה-QR שפוענחו
    private static class ParsedQr {
        private String parentId;
        private String childId;
    }
}
