@startuml
!pragma layout smetana
skinparam dpi 240
skinparam shadowing false
skinparam linetype ortho
skinparam classAttributeIconSize 0
skinparam defaultFontName Arial
skinparam classFontSize 15
skinparam packageFontSize 18
skinparam ArrowFontSize 12
skinparam classBackgroundColor<<screen>> #DCEEFF
skinparam classBorderColor<<screen>> #2F6FA3
skinparam classBackgroundColor<<inner>> #FFFFFF
skinparam classBorderColor<<inner>> #666666
hide empty methods
title Family Tasks - Screen Classes
caption Current screens. Child flow uses QR scan, then child selection, then the child dashboard.

package "auth" #DCEEFF {
class MainActivity <<screen>>
class ParentLoginFragment <<screen>>
class ParentRegisterFragment <<screen>>
class ChildQRLoginFragment <<screen>>
class ChildSelectionActivity <<screen>>
class "ChildSelectionActivity.ChildItem" as SelectionChildItem <<inner>>
}

package "parent" #DCEEFF {
class ParentDashboardActivity <<screen>>
class ManageChildrenActivity <<screen>>
class GenerateQRActivity <<screen>>
class AssignTaskToChildActivity <<screen>>
class ParentTaskTemplateActivity <<screen>>
}

package "child" #DCEEFF {
class ChildDashboardActivity <<screen>>
}

MainActivity ..> ParentLoginFragment
MainActivity ..> ParentRegisterFragment
MainActivity ..> ChildQRLoginFragment
ParentLoginFragment ..> ParentDashboardActivity
ParentRegisterFragment ..> ParentDashboardActivity

ChildQRLoginFragment ..> ChildSelectionActivity
ChildSelectionActivity ..> ChildDashboardActivity
ChildSelectionActivity +-- SelectionChildItem

ParentDashboardActivity ..> ManageChildrenActivity
ParentDashboardActivity ..> ParentTaskTemplateActivity
ParentDashboardActivity ..> AssignTaskToChildActivity
ParentDashboardActivity ..> GenerateQRActivity
@enduml
